; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_backend_close.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_backend_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@h_live = common dso_local global i32* null, align 8
@h_queue = common dso_local global i32* null, align 8
@h_scan = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_backend_close() #0 {
  %1 = load i32*, i32** @h_live, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @hb_close(i32** @h_live)
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32*, i32** @h_queue, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32 @hb_close(i32** @h_queue)
  br label %10

10:                                               ; preds = %8, %5
  %11 = load i32*, i32** @h_scan, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = call i32 @hb_close(i32** @h_scan)
  br label %15

15:                                               ; preds = %13, %10
  %16 = call i32 (...) @hb_global_close()
  ret void
}

declare dso_local i32 @hb_close(i32**) #1

declare dso_local i32 @hb_global_close(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
